2010-01-23  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Fixed test error without BitTorrent support.
	* test/XmlRpcMethodTest.cc

2010-01-23  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Fixed compile error without GNUTLS/OpenSSL.
	* src/util.cc

2010-01-23  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Changed compression level to Z_DEFAULT_COMPRESSION.
	* src/GZipEncoder.cc

2010-01-23  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added missing command line options: --http-no-cache,
	--bt-save-metadata and --bt-metadata-only.
	* doc/xmlrpc/aria2rpc

2010-01-22  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	aria2 now returns gzip compressed XML-RPC response if XML-RPC
	client accepts gzip content encoding.
	* src/A2STR.cc
	* src/A2STR.h
	* src/GZipEncoder.cc
	* src/GZipEncoder.h
	* src/HttpHeader.cc
	* src/HttpHeader.h
	* src/HttpServer.cc
	* src/HttpServer.h
	* src/HttpServerBodyCommand.cc
	* src/HttpServerCommand.cc
	* src/Makefile.am
	* src/XmlRpcResponse.cc
	* src/XmlRpcResponse.h
	* test/GZipEncoderTest.cc
	* test/Makefile.am

2010-01-18  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added XML-RPC client sample code in Python.
	* doc/aria2c.1.txt

2010-01-17  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Updated po templates.
	* po/aria2.pot

2010-01-17  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Bump up version number to 1.8.1
	* configure.ac

2010-01-17  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added version number to man page. Updated copyright year in man
	page.
	* doc/aria2c.1.txt

2010-01-17  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Rewritten toTagString
	* src/NameMatchOptionHandler.cc
	* test/OptionHandlerTest.cc

2010-01-17  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added dir and files key to the response struct of aria2.tellStatus
	XML-RPC method.  The value associated with files key is the list